Set security scheme et parameters to api doc
